cyph.im/css/cyph.css
body, #loading, md-sidenav {
  background-color: #8b62d9 !important; }

body, .md-button-inner {
  color: #f1f1f1 !important; }

html:not(.mobile) md-button {
  color: #444;
  background-color: #7d4fd3 !important; }
html:not(.mobile) md-button.focus, html:not(.mobile) md-button:hover {
  background-color: #7239dd !important; }
html:not(.mobile) md-button img {
  height: 100%; }

md-sidenav md-button {
  width: 100%; }
  md-sidenav md-button * {
    text-align: left; }

.app-message {
  font-weight: bold;
  margin-top: 20px; }

#message-box {
  width: 100%;
  resize: none; }

html.mobile #message-box {
  height: 48px;
  font-size: 17px;
  line-height: 22px;
  padding: 13px; }

#message-wrapper {
  position: relative; }

#sendbutton {
  position: absolute;
  height: 80%;
  top: 10%;
  right: 6px;
  opacity: 0.75;
  z-index: 10; }

#footer {
  margin-top: 10px; }

#message-list {
  overflow-y: scroll; }

.message {
  width: 85%;
  word-wrap: break-word;
  -webkit-hyphens: auto;
  -moz-hyphens: auto;
  -ms-hyphens: auto;
  hyphens: auto; }

.message-item:not(.unread) {
  -webkit-animation: inkRippleCheckbox 0.35s linear 0s 1 normal;
  -moz-animation: inkRippleCheckbox 0.35s linear 0s 1 normal;
  -ms-animation: inkRippleCheckbox 0.35s linear 0s 1 normal;
  -o-animation: inkRippleCheckbox 0.35s linear 0s 1 normal;
  animation: inkRippleCheckbox 0.35s linear 0s 1 normal; }

#desktop-sidebar {
  position: fixed;
  top: 0px;
  left: 0px;
  height: 100%;
  width: 200px;
  padding: 20px; }
  #desktop-sidebar .logo > img {
    width: 60%;
    margin: 0px auto;
    margin-bottom: 50px;
    display: block; }
  #desktop-sidebar md-button {
    font-size: 14px;
    width: 100%;
    margin-bottom: 6px; }

#loading {
  position: fixed;
  top: -1px;
  left: -1px;
  width: 101%;
  height: 101%;
  z-index: 999; }
  #loading > div {
    height: 60px;
    width: 60px;
    position: fixed;
    top: calc(50% - 30px);
    left: calc(50% - 30px); }

md-toolbar {
  background-color: #7239dd;
  height: 40px !important;
  min-height: 40px !important; }
  md-toolbar img {
    height: 25px !important; }

btf-markdown > :first-child, [btf-markdown] > :first-child {
  display: inline; }
btf-markdown > :not(:first-child), [btf-markdown] > :not(:first-child) {
  margin: 0px;
  margin-left: 25px; }

:not(textarea) {
  border: 0px !important; }

a {
  color: inherit; }

textarea {
  background-color: #f1f1f1; }

#new-messages {
  color: #8b62d9;
  width: 100%;
  text-align: center;
  margin-top: -20px;
  cursor: pointer; }

#new-messages:after {
  width: 100%; }

/* Mobile and desktop classes */
html:not(.mobile) .mobile-only {
  display: none !important; }
html:not(.mobile) body {
  padding: 10px;
  padding-left: 200px;
  padding-right: 20px; }

html.mobile .desktop-only {
  display: none !important; }

/*** SpinKit animations: http://tobiasahlin.com/spinkit/ ***/
/* Loading screen */
.double-bounce1, .double-bounce2 {
  width: 100%;
  height: 100%;
  border-radius: 50%;
  background-color: white;
  opacity: 0.6;
  position: absolute;
  top: 0;
  left: 0;
  -webkit-animation: bounce 2.0s infinite ease-in-out;
  animation: bounce 2.0s infinite ease-in-out; }

.double-bounce2 {
  -webkit-animation-delay: -1.0s;
  animation-delay: -1.0s; }

@-webkit-keyframes bounce {
  0%, 100% {
    -webkit-transform: scale(0); }
  50% {
    -webkit-transform: scale(1); } }
@keyframes bounce {
  0%, 100% {
    transform: scale(0);
    -webkit-transform: scale(0); }
  50% {
    transform: scale(1);
    -webkit-transform: scale(1); } }
/* Post-load spinner (on top of logo) */
.spinner {
  margin: 100px auto 0;
  width: 70px;
  text-align: center; }

.spinner > div {
  width: 18px;
  height: 18px;
  background-color: #333;
  border-radius: 100%;
  display: inline-block;
  -webkit-animation: bouncedelay 1.4s infinite ease-in-out;
  animation: bouncedelay 1.4s infinite ease-in-out;
  /* Prevent first frame from flickering when animation starts */
  -webkit-animation-fill-mode: both;
  animation-fill-mode: both; }

.spinner .bounce1 {
  -webkit-animation-delay: -0.32s;
  animation-delay: -0.32s; }

.spinner .bounce2 {
  -webkit-animation-delay: -0.16s;
  animation-delay: -0.16s; }

@-webkit-keyframes bouncedelay {
  0%, 80%, 100% {
    -webkit-transform: scale(0); }
  40% {
    -webkit-transform: scale(1); } }
@keyframes bouncedelay {
  0%, 80%, 100% {
    transform: scale(0);
    -webkit-transform: scale(0); }
  40% {
    transform: scale(1);
    -webkit-transform: scale(1); } }

/*# sourceMappingURL=cyph.css.map */

